# sct_plugins

./: .gitignore  .gitlab-ci.yml  README.md  nox_common.py  noxfile.py  zensical.toml
.github/workflows/: aresys.yml  asar.yml  cosmo.yml  documentation.yml  eos04.yml  iceye.yml  novasar1.yml  radarsat2.yml  saocom.yml  sentinel1.yml  strix.yml  terrasarx.yml
.gitlab/ci/: conda-forge-update.sh
docs/: .gitlab-ci.yml  index.md  install.md  intro.md
docs/about/: build.template.md
docs/architecture/: arch.md  internal.md
docs/plugins/aresys/: api.md  changelog.md  info.md
docs/plugins/asar/: api.md  info.md
docs/plugins/biomass/: api.md  changelog.md  info.md
docs/plugins/cosmo/: api.md  info.md
docs/plugins/eos04/: api.md  changelog.md  info.md
docs/plugins/iceye/: api.md  changelog.md  info.md
docs/plugins/novasar-1/: api.md  info.md
docs/plugins/radarsat-2/: api.md  changelog.md  info.md
docs/plugins/saocom/: api.md  info.md
docs/plugins/sentinel-1/: api.md  changelog.md  info.md
docs/plugins/strix/: api.md  info.md
docs/plugins/terrasarx/: api.md  changelog.md  info.md
overrides/stylesheets/: extra.css
sct_aresys_reader/: .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml
sct_aresys_reader/docs/source/: changelog.rst  conf.py  index.rst  install.rst
sct_aresys_reader/docs/source/reference/api/: plugin.rst
sct_aresys_reader/scripts/: local_registry.json
sct_aresys_reader/src/sct_aresys_reader/: __init__.py  interface.py  protocol_implementation.py
sct_aresys_reader/src/sct_aresys_reader/reader/: __init__.py  conversions.py
sct_aresys_reader/src/sct_aresys_reader/reader/io/: __init__.py  channel_iteration.py  io_support.py  manifest.py  metadata.py  point_target_binary.py  point_target_file.py  productfolder2.py  productfolder_layout.py
sct_aresys_reader/src/sct_aresys_reader/reader/io/parsing/: metadata_parsing.py  translate.py
sct_aresys_reader/src/sct_aresys_reader/reader/io/parsing/metadata_models/: __init__.py  aresys_generic_metadata.py  aresys_types.py
sct_aresys_reader/src/sct_aresys_reader/reader/io/point_target_models/: __init__.py  aresys_point_target_models.py
sct_aresys_reader/src/sct_aresys_reader/reader/math/: __init__.py  axis.py  genericpoly.py
sct_aresys_reader/tests/: __init__.py  test_registry_linux.json  test_registry_windows.json
sct_aresys_reader/tests/unittests/: __init__.py  test_protocol_compliance.py
sct_asar_reader/: .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml
sct_asar_reader/docs/source/: changelog.rst  conf.py  index.rst  install.rst
sct_asar_reader/scripts/: local_registry.json
sct_asar_reader/src/sct_asar_reader/: __init__.py  interface.py  protocol_implementation.py
sct_asar_reader/tests/: __init__.py  test_registry_linux.json  test_registry_windows.json
sct_asar_reader/tests/unittests/: __init__.py  test_protocol_compliance.py
sct_biomass_reader/: .gitignore  .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml
sct_biomass_reader/docs/source/: changelog.rst  conf.py  index.rst  install.rst
sct_biomass_reader/src/sct_biomass_reader/: __init__.py  interface.py  protocol_implementation.py  utils.py
sct_biomass_reader/tests/: __init__.py  test_registry_windows.json
sct_biomass_reader/tests/unittests/: __init__.py  test_protocol_compliance.py
sct_cosmo_reader/: .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml
sct_cosmo_reader/docs/source/: conf.py  index.rst  install.rst
sct_cosmo_reader/scripts/: local_registry.json  test_testing.py
sct_cosmo_reader/src/sct_cosmo_reader/: __init__.py  interface.py  protocol_implementation.py
sct_cosmo_reader/tests/: __init__.py  test_registry_linux.json  test_registry_windows.json
sct_eos04_reader/: .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml
sct_eos04_reader/tests/: __init__.py
sct_iceye_reader/: .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml
sct_iceye_reader/scripts/: local_registry.json  test_testing.py
sct_iceye_reader/tests/: __init__.py  test_registry.json  test_registry_linux.json  test_registry_windows.json
sct_novasar1_reader/: .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml
sct_novasar1_reader/scripts/: local_registry.json
sct_novasar1_reader/tests/: __init__.py  test_registry_linux.json  test_registry_windows.json
sct_radarsat2_reader/: .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml
sct_radarsat2_reader/scripts/: local_registry.json  test_testing.py
sct_radarsat2_reader/tests/: __init__.py  test_registry_linux.json  test_registry_windows.json
sct_saocom_reader/: .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml
sct_saocom_reader/docs/source/: conf.py  index.rst  install.rst
sct_saocom_reader/docs/source/reference/api/: plugin.rst
sct_saocom_reader/scripts/: local_registry.json
sct_saocom_reader/src/sct_saocom_reader/: __init__.py  interface.py  protocol_implementation.py
sct_saocom_reader/tests/: __init__.py  test_registry_linux.json  test_registry_windows.json
sct_saocom_reader/tests/unittests/: __init__.py  test_protocol_compliance.py
sct_sentinel1_reader/: .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml
sct_sentinel1_reader/scripts/: local_registry.json
sct_sentinel1_reader/tests/: test_registry_linux.json  test_registry_windows.json
sct_strix_reader/: .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml  uv.toml
sct_strix_reader/scripts/: local_registry_grd.json  local_registry_slc.json  test_testing.py
sct_strix_reader/tests/: __init__.py  test_registry_linux.json  test_registry_windows.json
sct_terrasarx_reader/: .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml
sct_terrasarx_reader/scripts/: local_registry.json  test_testing.py
sct_terrasarx_reader/tests/: __init__.py  test_registry_linux.json  test_registry_windows.json
(+85 files in other folders)
