[project]
name = "sct_saocom_reader"
description = "SCT (SAR Calibration Toolbox) plugin for reading Saocom Level 1 product format."
authors = [{ name = "Aresys S.R.L.", email = "info@aresys.it" }]
requires-python = ">= 3.11"
readme = "README.md"
license = { file = "LICENSE.txt" }
dependencies = [
    "numpy>2",
    "scipy",
    "shapely>=2.1.0",
    "eo-products==1.0.0",
    "perseo-core==1.0.0",
    "perseo-quality==1.0.0",
    "sct",
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["nox", "ruff", "pylint"]
test = ["pytest", "pytest-cov", "sct[graphs]"]
docs = ["zensical", "mkdocstrings-python"]

[project.entry-points."sct.input_products"]
saocom = "sct_saocom_reader.interface:SAOCOMProductPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/sct_saocom_reader/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=sct_saocom_reader",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--no-cov-on-fail",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.ruff]
line-length = 120
output-format = "grouped"
extend-exclude = [".venv", "scripts", "noxfile.py"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "W", "F", "A", "B", "I"]

[tool.pylint.master]
fail-under = 8.5
fail-on = ["unused-import"]

[tool.pylint.message_control]
disable = ["import-error", "logging-fstring-interpolation", "logging-not-lazy"]

[tool.pylint.format]
max-line-length = 120

[tool.pdm]
distribution = true

[tool.pdm.scripts]
format_check = "ruff format --check"
format = "ruff format"
sort = "ruff check --select I --fix-only"
lint_check = "ruff check"
lint_fix = "ruff check --show-fixes --fix-only"
test = "python -m pytest ./tests -v"
check_code = { composite = ["format_check", "lint_check"] }
fix_format = { composite = ["format", "sort", "lint_fix"] }
